--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-menubar": "^1.1.5",
     "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-query": "^5.66.0",
@@ -24,15 +24,19 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^11.2.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.474.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
+    "react-calendar": "^5.1.0",
     "react-countup": "^6.5.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-google-charts": "^5.2.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
